--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,18 +8,40 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCR-Uj9tRILOCAWNAAr8bzAUOvn8ZH6irY&libraries=places&callback=initAutocomplete" async defer></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/themes/material_blue.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo&display=swap" rel="stylesheet">
+
   </head>
 
   <body>
-  <%= render 'shared/navbar' %>
+    <%= render 'shared/navbar' %>
     <%= yield %>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-  <div style="background-color: beige;">
-    <h1> Test </h1>
-    <p>Number of users: <%= User.count %></p>
-    <p>Number of trips: <%= Trip.count %></p>
-    <p>Number of activities: <%= Activity.count %></p>
-  </div>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <div style="background-color: beige;">
+      <h1> Test </h1>
+      <p>Number of users: <%= User.count %></p>
+      <p>Number of trips: <%= Trip.count %></p>
+      <p>Number of activities: <%= Activity.count %></p>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script>
+      document.addEventListener("turbo:load", function () {
+        flatpickr("#date", {
+          altInput: true,
+          altFormat: "F j, Y",
+          dateFormat: "Y-m-d",
+          minDate: "today"
+        });
+      });
+    </script>
   </body>
 </html>
