--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <%= stylesheet_link_tag "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css", media: "all" %>
+
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCR-Uj9tRILOCAWNAAr8bzAUOvn8ZH6irY&libraries=places&callback=initAutocomplete" async defer></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
@@ -43,5 +45,6 @@
         });
       });
     </script>
+    <%= render "shared/footer" %>
   </body>
 </html>
