--- a/app/views/onboarding/interests.html.erb
+++ b/app/views/onboarding/interests.html.erb
@@ -1,6 +1,6 @@
 <% content_for :hide_navbar, true %>
 
-<div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: black;">
+<div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: white;">
   <div class="bg-white bg-opacity-75 rounded-4 p-4 shadow-lg text-center" style="backdrop-filter: blur(50px); max-width: 600px; width: 90%; color: black;">
     <h1 class="archivo-black fw-bold fs-3 mb-4">What are you into?</h1>
 
@@ -18,7 +18,7 @@
     <% end %>
 
     <div class="progress mt-4" style="height: 8px; border-radius: 4px;">
-      <div class="progress-bar bg-primary" style="width: 20%;"></div>
+      <div class="progress-bar bg-success" style="width: 25%;"></div>
     </div>
   </div>
 </div>
