--- a/app/views/onboarding/friends.html.erb
+++ b/app/views/onboarding/friends.html.erb
@@ -1,6 +1,6 @@
 <% content_for :hide_navbar, true %>
 
-<div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: black;">
+<div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: white;">
   <div class="bg-white bg-opacity-75 rounded-4 p-4 shadow-lg text-center"
        style="backdrop-filter: blur(50px); max-width: 600px; width: 90%; color: black;">
 
@@ -18,7 +18,7 @@
     <%= link_to "Complete Onboarding →", root_path, class: "btn btn-success btn-lg rounded-pill mt-3" %>
 
     <div class="progress mt-4 mx-auto" style="height: 8px; border-radius: 4px; width: 90%;">
-      <div class="progress-bar bg-primary" style="width: 90%;"></div>
+      <div class="progress-bar bg-success" style="width: 0%;"></div>
     </div>
   </div>
 </div>
