--- a/app/views/onboarding/style_and_personality.html.erb
+++ b/app/views/onboarding/style_and_personality.html.erb
@@ -1,8 +1,8 @@
 <% content_for :hide_navbar, true %>
 
-<div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: black;">
+<div class="d-flex vh-100 justify-content-center align-items-center" style="background-color: white;">
   <div class="bg-white bg-opacity-75 rounded-4 p-4 shadow-lg text-center" style="backdrop-filter: blur(50px); max-width: 600px; width: 90%; color: black;">
-    <h1 class="archivo-black fw-bold fs-3 mb-4">Refine your interests</h1>
+    <h1 class="archivo-black fw-bold fs-3 mb-4">Travel Style & Personality</h1>
 
     <%= form_with url: onboarding_save_style_and_personality_path, method: :post, local: true do %>
       <div class="overflow-auto" style="max-height: 60vh;">
@@ -27,7 +27,7 @@
     <% end %>
 
     <div class="progress mt-4" style="height: 8px; border-radius: 4px;">
-      <div class="progress-bar bg-primary" style="width: 60%;"></div>
+      <div class="progress-bar bg-success" style="width: 75%;"></div>
     </div>
   </div>
 </div>
