--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,5 +43,10 @@
         });
       });
     </script>
+
+    <turbo-frame
+    id="contact_details"
+    src="http://localhost:3000/contacts/9"
+    complete=""></turbo-frame>
   </body>
 </html>
