--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -1,6 +1,9 @@
 .avatar {
   width: 40px;
-  border-radius: 50%;
+  min-width: 40px;
+  height: 40px;
+  min-height: 40px;
+  border-radius: 90%;
 }
 .avatar-large {
   width: 56px;
@@ -17,4 +20,10 @@
   border-radius: 0px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
   border: white 1px solid;
+}
+
+.avatar-select-label input[type="radio"]:checked + img,
+.avatar-selected {
+  border: 3px solid #008000 !important;
+  box-shadow: 0 0 0 3px rgba(7, 62, 6, 0.4);
 }
