updated index.scss + user controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,11 +38,12 @@
         });
       });
     </script>
-    
+
     <turbo-frame
-    id="contact_details"
-    src="http://localhost:3000/contacts/9"
-    complete=""></turbo-frame>
+      id="contact_details"
+      src="http://localhost:3000/contacts/9"
+      complete="">
+    </turbo-frame>
 
     <%= render "shared/footer" %>
 
