all prompts for ai are saved and displayed on show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,7 @@
 
     <turbo-frame
       id="contact_details"
-      src="http://localhost:3000/contacts/9"
+      src="http://localhost:3000/contacts"
       complete="">
     </turbo-frame>
 
