--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,11 +1,13 @@
 <turbo-frame id="user_profile_<%= @user.id %>">
   <%= form_with(model: user, local: false) do |form| %>
     <div class="mb-3" style="width: 330px; margin: auto;">
-      <%= form.label :username, class: "form-label" %>
-      <%= form.text_field :username, class: "form-control", required: true %>
+      <div class="form-floating mb-3">
+        <%= form.text_field :username, class: "form-control", id: "floatingUsername", placeholder: "Username", required: true %>
+        <%= form.label :username, "Username", for: "floatingUsername" %>
+      </div>
 
       <%= form.label :user_image_url, "Choose your avatar", class: "form-label" %>
-      <div class="row row-cols-5 g-3 mb-3"">
+      <div class="row row-cols-5 g-2 mb-2"">
         <% avatar_urls = [
           "https://source.unsplash.com/100x100/?portrait,1",
           "https://source.unsplash.com/100x100/?portrait,2",
@@ -28,17 +30,25 @@
         <% end %>
       </div>
 
-      <%= form.label :password, class: "form-label" %>
-      <%= form.password_field :password, class: "form-control", required: true %>
+      <div class="form-floating mb-3">
+        <%= form.password_field :password, class: "form-control", id: "floatingPassword", placeholder: "Password", required: true %>
+        <%= form.label :password, "Password", for: "floatingPassword" %>
+      </div>
 
-      <%= form.label :email, class: "form-label" %>
-      <%= form.text_field :email, class: "form-control", required: true %>
+      <div class="form-floating mb-3">
+        <%= form.email_field :email, class: "form-control", id: "floatingEmail", placeholder: "Email", required: true %>
+        <%= form.label :email, "Email", for: "floatingEmail" %>
+      </div>
 
-      <%= form.label :last_name, class: "form-label" %>
-      <%= form.text_field :last_name, class: "form-control", required: true %>
+      <div class="form-floating mb-3">
+        <%= form.text_field :last_name, class: "form-control", id: "floatingLastName", placeholder: "Last Name", required: true %>
+        <%= form.label :last_name, "Last Name", for: "floatingLastName" %>
+      </div>
 
-      <%= form.label :first_name, class: "form-label" %>
-      <%= form.text_field :first_name, class: "form-control", required: true %>
+      <div class="form-floating mb-3">
+        <%= form.text_field :first_name, class: "form-control", id: "floatingFirstName", placeholder: "First Name", required: true %>
+        <%= form.label :first_name, "First Name", for: "floatingFirstName" %>
+      </div>
 
     <%= form.submit %>
     <%= link_to "Cancel", user_path(user), data: { turbo_frame: "user_profile_#{user.id}" }, class: "btn btn-secondary ms-2" %>
