--- a/app/views/users/_marker.html.erb
+++ b/app/views/users/_marker.html.erb
@@ -1,1 +1,3 @@
-<%= image_tag "logo.png", height: 30, width: 30, alt: "Logo" %>
+<div class="custom-marker">
+  <i class="fa-solid fa-location-dot fa-2x" style="color: red;"></i>
+</div>
