fix: border from the footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -42,7 +42,7 @@
           </div>
         </div>
 
-        <!-- Blogs -->
+        <!-- Blogs
         <div class="accordion-item bg-transparent border-0">
           <h2 class="accordion-header" id="headingBlogs">
             <button class="accordion-button bg-transparent text-light fs-6 collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseBlogs" aria-expanded="false" aria-controls="collapseBlogs">
@@ -56,7 +56,7 @@
             </div>
           </div>
         </div>
-
+        -->
         <!-- More -->
         <div class="accordion-item bg-transparent border-0">
           <h2 class="accordion-header" id="headingMore">
@@ -110,8 +110,8 @@
           <li class="mb-2"><%= link_to "Travel Tips", "#", class: "text-light text-decoration-none d-block" %></li>
           <li><%= link_to "Guides & Resources", "#", class: "text-light text-decoration-none d-block" %></li>
         </ul>
-      </div>  -->
-
+      </div>
+    -->
       <!-- More -->
       <div class="col-md-3 mb-4">
         <h5 class="text-uppercase mb-3">More</h5>
