--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -84,3 +84,8 @@
     background-color: rgba(0, 123, 255, 0.1);
   }
 }
+
+footer .accordion-button {
+  box-shadow: none !important;
+  outline: none !important;
+}
