--- a/app/views/trips/index.html.erb
+++ b/app/views/trips/index.html.erb
@@ -19,14 +19,14 @@
               <%= f.label :start_date, class: "archivo form-label small mb-2 text-start", style: "font-weight:700" do %>
                 <i class="bi bi-calendar-event me-1"></i> Start Date
               <% end %>
-              <%= f.text_field :start_date, id: "start-date", class: "form-control focus-ring form-control-sm border-secondary rounded-pill", style: "--bs-focus-ring-color: rgba(var(--bs-dark-rgb), .1); width: 200px; background-color: rgba(255, 255, 255, 0.8)", placeholder: "Select start date" %>
+              <%= f.text_field :start_date, id: "start-date", class: "p-2 form-control focus-ring form-control-sm border-secondary rounded-pill", style: "--bs-focus-ring-color: rgba(var(--bs-dark-rgb), .1); width: 200px; background-color: rgba(255, 255, 255, 0.8)", placeholder: "Select start date" %>
             </div>
 
             <div class="rounded-3 pt-4 ps-4 d-flex flex-column justify-content-center" style="min-width: 180px; flex: 1 1 180px;">
               <%= f.label :end_date, class: "archivo form-label small mb-2 text-start", style: "font-weight:700" do %>
                 <i class="bi bi-calendar-event me-1"></i> End Date
               <% end %>
-              <%= f.text_field :end_date, id: "end-date", class: "form-control form-control-sm border-secondary focus-ring rounded-pill", style: "--bs-focus-ring-color: rgba(var(--bs-dark-rgb), .1); width: 200px; background-color: rgba(255, 255, 255, 0.8)", placeholder: "Select end date" %>
+              <%= f.text_field :end_date, id: "end-date", class: "form-control p-2 form-control-sm border-secondary focus-ring rounded-pill", style: "--bs-focus-ring-color: rgba(var(--bs-dark-rgb), .1); width: 200px; background-color: rgba(255, 255, 255, 0.8)", placeholder: "Select end date" %>
             </div>
           </div>
 
@@ -34,7 +34,7 @@
             <%= f.label :location, class: "archivo form-label small mb-2 text-start", style: "font-weight:700" do %>
               <i class="bi bi-geo-alt-fill me-1"></i> Destination
             <% end %>
-            <%= f.text_field :location, id: "location", class: "form-control form-control-sm border-secondary focus-ring rounded-pill", style: "--bs-focus-ring-color: rgba(var(--bs-dark-rgb), .1); width: 430px;  background-color: rgba(255, 255, 255, 0.8)", placeholder: "e.g. Madrid, Spain" %>
+            <%= f.text_field :location, id: "location", class: "p-2 form-control form-control-sm border-secondary focus-ring rounded-pill", style: "--bs-focus-ring-color: rgba(var(--bs-dark-rgb), .1); width: 430px;  background-color: rgba(255, 255, 255, 0.8)", placeholder: "e.g. Madrid, Spain" %>
           </div>
 
           <div class="rounded-3 mt-4 ps-4 pt-2 d-flex flex-column justify-content-center align-items-start" style="min-width: 180px; max-width: 430px; flex: 1 1 180px;">
